JumpScript/tests/baselines/reference/breakTarget6.errors.txt
tests/cases/compiler/breakTarget6.jump(2,3): error TS1116: A 'break' statement can only jump to a label of an enclosing statement.


==== tests/cases/compiler/breakTarget6.jump (1 errors) ====
    while (true) {
      break target;
      ~~~~~~~~~~~~~
!!! error TS1116: A 'break' statement can only jump to a label of an enclosing statement.
    }